[package]
name = "coretoolbox"
version = "0.1.0"
authors = ["Colin Walters <walters@verbum.org>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
structopt = "0.2"
directories = "1.0"
failure = "0.1.1"
lazy_static = "1.2.0"
tempfile = "3.0.7"
serde = "1.0.78"
serde_derive = "1.0.78"
serde_yaml = "0.8"

[[bin]]
name = "xokdinst"
path = "src/coretoolbox.rs"